...
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/display_searchlist_layout_Item">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:padding="5dp"
            android:layout_gravity="center"
            android:id="@+id/imageView_display_search_list_item"/>

        <TextView
            android:id="@+id/textView_recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:layout_weight="5"
...
