...
                    android:id="@+id/radioButton_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <RadioButton
                    android:id="@+id/radioButton_titel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titel" />


            </RadioGroup>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_searchlist_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="10dp"/>

...
