...
    <string name="textView_feed">Feed</string>
    <string name="feed_headline">Die neusten Rezepte</string>
    <string name="group_title_fragment">Gruppen</string>
    <string name="create_group">Gruppe erstellen</string>
    <string name="friend_title">Freunde</string>
    <string name="friend_requests">Freundschaftsanfragen</string>
    <string name="search_button">Suchen</string>
    <string name="enter_user_id">Gib dir einen Nutzernamen</string>
    <string name="admin_remove_item">Löschen</string>
    <string name="public_recipe_search_title">Suche ein Rezept</string>
    <string name="recipe_title">Titel des Rezeptes</string>

    <!--Strings übernommen von beispiel-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Exzellenz-Koch</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
    <string name="vegetarian">vegetarisch</string>
    <string name="preparation_description">Beschreibe mit ein paar Worten, wie dein Rezept zubereitet wird.
                                            Überschriften innerhalb des Textes kannst du durch das Setzen von Sternchen kennzeichnen: *Überschriftname* </string>
    <string name="email_address_input">Gib deine E-Mail Adresse ein</string>
    <string name="password_input">Gib dein Passwort ein</string>
    <string name="search_ingredients">Eier, Lauch, Nudeln, Zucker, ...</string>
    <string name="textView_search_title_text">Gibt den Titel des Rezeptes ein, nach dem du suchen willst:</string>
    <string name="search_ingredients_headline">Gib Zutaten ein, nach denen du suchen willst:</string>
    <string name="editText_hint_search_tags">vegetarisch, Hauptspeise, süß, deftig, ...</string>
    <string name="search_tags_headline">Welche Tags soll das Rezept haben?</string>
    <string name="login">Einloggen</string>
    <string name="login_have_no_account">Ich habe noch keinen Account</string>
    <string name="password_stars">**********</string>
    <string name="open">Öffnen</string>
    <string name="feed">Feed</string>
    <string name="menu">Menü</string>
...
    <string name="my_profile_title">Mein Profil</string>
    <string name="min">min</string>
    <string name="preptime">Zubereitungszeit:</string>
    <string name="share">Teilen</string>
    <string name="logout">Ausloggen</string>
    <string name="reportRecipe">melden</string>
    <string name="titel">Titel</string>
    <string name="favourites_head_title">Favoriten</string>
    <string name="favourites_header">Favoriten</string>
    <string name="portions_headline">Anzahl Portionen: </string>
    <string name="portion_amount">Portionenanzahl</string>
    <string name="creation_time_headline">Erstellungsdatum:</string>
    <string name="load_more">Mehr laden</string>
...
